# tycho

./: .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  MANIFEST.in  README.rst  docker-compose.yml  gulpfile.js  gunicorn_config.py  main.py  package.json  pyproject.toml  setup.py  ubuild.py  uranium
docs/: Makefile  conf.py  design.rst  events.rst  index.rst  make.bat  runbook.rst  userguide.rst
event_tracking/: app.py
event_tracking/db/: __init__.py  utils.py
event_tracking/db/event/: __init__.py  deserialize.py  serialize.py
event_tracking/models/: config.py  event.py  eventdb.py  eventnode.py  events_with_count.py
event_tracking/models/types/: __init__.py
event_tracking/routes/: event.py
event_tracking/scripts/: create_indexes.py
event_tracking/templates/: __init__.py  diagrams.html
event_tracking/tests/: conftest.py
event_tracking/tests/models/: test_model_eventdb.py
event_tracking/tests/routes/: test_event.py
src/js/: EtsGraph.js  GraphApp.js
src/js/__test__/: test-EtsGraph.js
src/less/: diagram.less  ets.less  tooltip.less
tycho/: app.py  main.py
tycho/db/: connection.py  utils.py
tycho/db/event/: __init__.py  deserialize.py  serialize.py
tycho/docs/: .buildinfo  events.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
tycho/docs/.doctrees/: environment.pickle  events.doctree  index.doctree
tycho/models/: config.py  event.py  eventdb.py
tycho/routes/: __init__.py  event.py
tycho/scripts/: create_indexes.py
tycho/templates/: index.html
tycho/tests/: conftest.py
(+13 files in other folders)
