[tool.poetry]
name = "tycho"
version = "0.1"
description = ""
authors = ["Yusuke Tsutsumi <yusuket@zillowgroup.com>"]
include = [
    "tycho/templates/**",
    "tycho/static/*",
    "tycho/docs/*",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
aiohttp-cors = "^0.7.0"
motor = "^2.1.0"
pymongo = "^3.10.1"
orbital-core = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12", "setuptools_scm[toml]>3.4"]
build-backend = "poetry.masonry.api"

[tools.setuptools_scm]